force-app/main/default/objects/Service__c/fields/Adult_Pax__c.field-meta.xml
<CustomField>
    <fullName>Adult_Pax__c</fullName>
    <label>Adult Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>