force-app/main/default/objects/Service__c/fields/Airline_and_Flight_Preference__c.field-meta.xml
<CustomField>
    <fullName>Airline_and_Flight_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Airline and Flight Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>