force-app/main/default/objects/Service__c/fields/Booking_Comments__c.field-meta.xml
<CustomField>
    <fullName>Booking_Comments__c</fullName>
    <description>Additional booking notes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>