force-app/main/default/objects/Service__c/fields/Booking_status__c.field-meta.xml
<CustomField>
    <fullName>Booking_status__c</fullName>
    <formula>CASE( Service__c , &apos;Flight&apos;, TEXT(Flight_Booking_Status__c ), &apos;Limo&apos;, TEXT(Limo_Booking_Status__c ), &apos;Hotel&apos;, TEXT(Hotel_Booking_Status__c ), &apos;Restaurant&apos;, TEXT(Restaurant_Booking_Status__c ), null)</formula>
    <label>Booking status</label>
    <type>Text</type>
</CustomField>