force-app/main/default/objects/Service__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan (3 seater)</fullName>
            </value>
            <value>
                <fullName>Premium Sedan (3 seater)</fullName>
            </value>
            <value>
                <fullName>SUV (3 seater)</fullName>
            </value>
            <value>
                <fullName>Mini Van (7 seater)</fullName>
            </value>
            <value>
                <fullName>Sprinter (11 seater)</fullName>
            </value>
            <value>
                <fullName>Minibus (22 seater) – 24 hour notice</fullName>
            </value>
            <value>
                <fullName>Minibus (22 seater) – 48 hour notice</fullName>
            </value>
            <value>
                <fullName>Coach (30 seater) – 48 hour notice</fullName>
            </value>
            <value>
                <fullName>Coach (42 seater) – 48 hour notice</fullName>
            </value>
            <value>
                <fullName>Bentley (3 Seater) - 48 hour notice</fullName>
                <isActive>false</isActive>
                <label>Bentley (3 Seater) - 48 hour notice</label>
            </value>
            <value>
                <fullName>Coach (20 Seater)</fullName>
                <isActive>false</isActive>
                <label>Coach (20 Seater)</label>
            </value>
            <value>
                <fullName>Coach (22 seater) - 48 hour notice</fullName>
                <isActive>false</isActive>
                <label>Coach (22 seater) - 48 hour notice</label>
            </value>
            <value>
                <fullName>Coach (32 seater) - 48 hour notice</fullName>
                <isActive>false</isActive>
                <label>Coach (32 seater) - 48 hour notice</label>
            </value>
            <value>
                <fullName>Coach (42 Seater) - 24 hour notice</fullName>
                <isActive>false</isActive>
                <label>Coach (42 Seater) - 24 hour notice</label>
            </value>
            <value>
                <fullName>Executive Sedan (3 seater)</fullName>
                <isActive>false</isActive>
                <label>Executive Sedan (3 seater)</label>
            </value>
            <value>
                <fullName>Luxury Sedan (3 seater)</fullName>
                <isActive>false</isActive>
                <label>Luxury Sedan (3 seater)</label>
            </value>
            <value>
                <fullName>Mini Bus (13 seater)</fullName>
                <isActive>false</isActive>
                <label>Mini Bus (13 seater)</label>
            </value>
            <value>
                <fullName>Rolls Royce Drophead (3 seater) - 48 hour notice</fullName>
                <isActive>false</isActive>
                <label>Rolls Royce Drophead (3 seater) - 48 hour notice</label>
            </value>
            <value>
                <fullName>Sprinter (11 seater) - 24 hour notice</fullName>
                <isActive>false</isActive>
                <label>Sprinter (11 seater) - 24 hour notice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>