force-app/main/default/objects/Service__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>