force-app/main/default/objects/Service__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sydney - 1111</fullName>
            </value>
            <value>
                <fullName>Gold Coast - 1111</fullName>
            </value>
            <value>
                <fullName>Brisbane - 1111</fullName>
            </value>
            <value>
                <fullName>Interstate - 1712</fullName>
            </value>
            <value>
                <fullName>International - 1132</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>