force-app/main/default/objects/Service__c/fields/Cust_Alias__c.field-meta.xml
<CustomField>
    <fullName>Cust_Alias__c</fullName>
    <formula>IF(ISPICKVAL( Property__c , &quot;Sydney&quot;) , &apos;SYD0125&apos;, 
 IF(ISPICKVAL( Property__c , &quot;Gold Coast&quot;), &apos;GC0100&apos;, 
 IF( ISPICKVAL(Property__c , &quot;Brisbane&quot;) , &apos;BNE0199&apos;, 
&quot;&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cust_Alias</label>
    <type>Text</type>
</CustomField>