force-app/main/default/objects/Service__c/fields/Depart_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Depart_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Depart Date and Time (User Timezone)</label>
    <type>DateTime</type>
</CustomField>