force-app/main/default/objects/Service__c/fields/Dining_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dining_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dining Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>