force-app/main/default/objects/Service__c/fields/Drop_Off_Flight_Details__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Flight_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Off Flight Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>