force-app/main/default/objects/Service__c/fields/Drop_Off_Location__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Location__c</fullName>
    <label>Drop Off Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>The Star Grand</fullName>
            </value>
            <value>
                <fullName>The Star Residencces</fullName>
            </value>
            <value>
                <fullName>The Darling</fullName>
            </value>
            <value>
                <fullName>Sydney Airport Dom Terminal</fullName>
            </value>
            <value>
                <fullName>Sydney Airport Intl Terminal</fullName>
            </value>
            <value>
                <fullName>Private Jet Base</fullName>
            </value>
            <value>
                <fullName>Jones Bay Wharf</fullName>
            </value>
            <value>
                <fullName>Gold Coast Airport</fullName>
            </value>
            <value>
                <fullName>Brisbane Airport Dom Terminal</fullName>
            </value>
            <value>
                <fullName>Brisbane Airport Intl Terminal</fullName>
            </value>
            <value>
                <fullName>Marina Mirage</fullName>
            </value>
            <value>
                <fullName>Treasury Brisbane</fullName>
            </value>
            <value>
                <fullName>The Star Grand Gold Coast</fullName>
            </value>
            <value>
                <fullName>The Darling Gold Coast</fullName>
            </value>
            <value>
                <fullName>Gold Coast Airport Dom Terminal</fullName>
            </value>
            <value>
                <fullName>Gold Coast Airport Intl Terminal</fullName>
            </value>
            <value>
                <fullName>The Star Residence / Dorsett</fullName>
            </value>
            <value>
                <fullName>The Star Grand Brisbane</fullName>
            </value>
            <value>
                <fullName>The Darling at The Star Gold Coast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>