force-app/main/default/objects/Service__c/fields/Flight_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Flight_Booking_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Admin Use Only</inlineHelpText>
    <label>Flight Booking Reference - Admin Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>