force-app/main/default/objects/Service__c/fields/Flight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Flight_Charge__c</fullName>
    <label>Flight Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NGC</fullName>
            </value>
            <value>
                <fullName>Room Charge</fullName>
            </value>
            <value>
                <fullName>Gaming Comp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>