force-app/main/default/objects/Service__c/fields/Flight_Region__c.field-meta.xml
<CustomField>
    <fullName>Flight_Region__c</fullName>
    <label>Flight Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>