force-app/main/default/objects/Service__c/fields/Flying_to__c.field-meta.xml
<CustomField>
    <fullName>Flying_to__c</fullName>
    <label>Flying to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Flight_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Macau</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Bangkok</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Guangzhou</fullName>
            </value>
            <value>
                <fullName>Chengdu</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>