force-app/main/default/objects/Service__c/fields/Flying_to_other_location__c.field-meta.xml
<CustomField>
    <fullName>Flying_to_other_location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flying to other location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>