force-app/main/default/objects/Service__c/fields/Frequent_flyer_number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_flyer_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent flyer number</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>