force-app/main/default/objects/Service__c/fields/Host_Contact__c.field-meta.xml
<CustomField>
    <fullName>Host_Contact__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__r.Host_Brisbane__c)), Contact__r.Host_Brisbane__r.MobilePhone,
    IF(NOT(ISBLANK(Contact__r.Host_GC__c)),Contact__r.Host_GC__r.MobilePhone,
    	IF(NOT(ISBLANK(Contact__r.Host_Sydney__c)), 
    	Contact__r.Host_Sydney__r.MobilePhone, 
    	&apos;&apos;
    	)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Contact</label>
    <type>Text</type>
</CustomField>