force-app/main/default/objects/Service__c/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__r.Host_Brisbane__c)), Contact__r.Host_Brisbane__r.Host_Name__c,
    IF(NOT(ISBLANK(Contact__r.Host_GC__c)), Contact__r.Host_GC__r.Host_Name__c,
    	IF(NOT(ISBLANK(Contact__r.Host_Sydney__c)), 
    		Contact__r.Host_Sydney__r.Host_Name__c, 
    		&apos;&apos;
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Name</label>
    <type>Text</type>
</CustomField>