force-app/main/default/objects/Service__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYD - The Star Grand</fullName>
            </value>
            <value>
                <fullName>SYD - The Star Residences</fullName>
            </value>
            <value>
                <fullName>SYD - The Darling</fullName>
            </value>
            <value>
                <fullName>GC - The Star Grand</fullName>
            </value>
            <value>
                <fullName>GC - The Darling</fullName>
            </value>
            <value>
                <fullName>BNE - Treasury</fullName>
            </value>
            <value>
                <fullName>BNE - The Star Grand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>