force-app/main/default/objects/Service__c/fields/Hotel_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirmation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Booking Reference - Admin Only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>