force-app/main/default/objects/Service__c/fields/Limo_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Limo_Accessories__c</fullName>
    <label>Limo Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baby Capsule (0-6months)</fullName>
            </value>
            <value>
                <fullName>Child seat (6months - 4 years old)</fullName>
            </value>
            <value>
                <fullName>Booster Seat (4 - 7 Years old)</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Baby Seat (6 months to 4 years)</fullName>
                <isActive>false</isActive>
                <label>Baby Seat (6 months to 4 years)</label>
            </value>
            <value>
                <fullName>Booster (4 years to 7 years)</fullName>
                <isActive>false</isActive>
                <label>Booster (4 years to 7 years)</label>
            </value>
            <value>
                <fullName>Capsule (under 6 months)</fullName>
                <isActive>false</isActive>
                <label>Capsule (under 6 months)</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <isActive>false</isActive>
                <label>Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>