force-app/main/default/objects/Service__c/fields/Limo_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Limo_Booking_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Limo Booking Reference</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>