force-app/main/default/objects/Service__c/fields/Limo_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Limo_Booking_Status__c</fullName>
    <label>Limo Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Booking</fullName>
                <default>true</default>
                <label>New Booking</label>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Request Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>