force-app/main/default/objects/Service__c/fields/Limo_Charge__c.field-meta.xml
<CustomField>
    <fullName>Limo_Charge__c</fullName>
    <label>Limo Charge</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NGC</fullName>
            </value>
            <value>
                <fullName>ROOM CHARGE</fullName>
            </value>
            <value>
                <fullName>GAMING COMP</fullName>
            </value>
            <value>
                <fullName>COMP DOLLAR</fullName>
            </value>
            <value>
                <fullName>DIAMOND HOME TRANSFER</fullName>
                <isActive>false</isActive>
                <label>DIAMOND HOME TRANSFER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>