force-app/main/default/objects/Service__c/fields/Meet_Greet__c.field-meta.xml
<CustomField>
    <fullName>Meet_Greet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meet &amp; Greet</label>
    <type>Checkbox</type>
</CustomField>