force-app/main/default/objects/Service__c/fields/MOP_Status__c.field-meta.xml
<CustomField>
    <fullName>MOP_Status__c</fullName>
    <label>MOP Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RO – Room only</fullName>
            </value>
            <value>
                <fullName>RB – Room &amp; Breakfast</fullName>
            </value>
            <value>
                <fullName>POA – Pay on Arrival</fullName>
            </value>
            <value>
                <fullName>$1CC - $1Credit Card in-Print</fullName>
            </value>
            <value>
                <fullName>ATP – Adjust to play</fullName>
            </value>
            <value>
                <fullName>NGC – Non-gaming Comp</fullName>
            </value>
            <value>
                <fullName>WM – Waive Monies</fullName>
            </value>
            <value>
                <fullName>DNWM – Do not waive monies</fullName>
            </value>
            <value>
                <fullName>CALL REP</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>