force-app/main/default/objects/Service__c/fields/One_way_OR_Return__c.field-meta.xml
<CustomField>
    <fullName>One_way_OR_Return__c</fullName>
    <label>One-way OR Return?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-way</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>