force-app/main/default/objects/Service__c/fields/Other_Drop_Off_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Drop_Off_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Drop Off Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>