force-app/main/default/objects/Service__c/fields/Other_MOP_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_MOP_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other MOP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>