force-app/main/default/objects/Service__c/fields/Other_Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Pick_Up_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Pick-Up Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>