force-app/main/default/objects/Service__c/fields/Other_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Special Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>