force-app/main/default/objects/Service__c/fields/Other_Traveller_Class_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Other_Traveller_Class_of_Travel__c</fullName>
    <label>Other Traveller Class of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheapest Economy Class</fullName>
            </value>
            <value>
                <fullName>Flexi Economy Class</fullName>
            </value>
            <value>
                <fullName>Premium Economy Class</fullName>
            </value>
            <value>
                <fullName>Business Class</fullName>
            </value>
            <value>
                <fullName>First Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>