force-app/main/default/objects/Service__c/fields/Other_Traveller_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Traveller_Passport_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Traveller Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>