force-app/main/default/objects/Service__c/fields/Patron_Name__c.field-meta.xml
<CustomField>
    <fullName>Patron_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
    <label>Patron Name</label>
    <type>Text</type>
</CustomField>