force-app/main/default/objects/Service__c/fields/Patron_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Patron_Name_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patron Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>