force-app/main/default/objects/Service__c/fields/Pax__c.field-meta.xml
<CustomField>
    <fullName>Pax__c</fullName>
    <label>Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>