force-app/main/default/objects/Service__c/fields/Pick_Up_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick Up Date and Time (User Timezone)</label>
    <type>DateTime</type>
</CustomField>